--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>Andriy Hedzyk</strong><br />
-						Junior Java Script Developer<br />
-						<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
+					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" />
+					</a>
+					<h1><strong>Andriy Hedzyk</strong><br>
+						<p>junior java script developer</p></h1>
+						<!-- crafted by <a href="http://html5up.net">HTML5 UP</a>. -->
 				</div>
 			</header>
 
