--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jaguar838.github.io/cream-2021/" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="https://jaguar838.github.io/cream-2021/" class="image fit thumb"><img src="images/thumbs/01.JPG" alt="" /></a>
 								<h3>Ice Cream 2021</h3>
 								<p>HTML5, CSS3, JS, GULP, SASS, BEM</p>
 							</article>
