--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 									</div>
 								</form>
 								<ul class="actions">
-									<li><input type="submit" value="submitForm" /></li>
+									<li><input type="submit" value="Send Message" /></li>
 								</ul>
 							</div>
 							<div class="col-4 col-12-small">
