--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" />
 					</a>
 					<h1><strong>Andriy Hedzyk</strong><br>
-						<p>junior java script developer</p></h1>
+						<p>Junior Java Script Developer</p></h1>
 				</div>
 			</header>
 
