--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<header class="major">
 							<h2>GOAL</h2>
 						</header>
-						<p>I‘m looking for interesting job as front-end developer in friendly,
+						<p>I‘m looking for an interesting job as a front-end developer in friendly,
 						thriving, and exciting company to develop my skills as well as grove
 						with a team</p>
 						<ul class="actions">
@@ -40,7 +40,7 @@
 						</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://jaguar838.github.io/cream-2021/" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
+								<a href="https://jaguar838.github.io/cream-2021/" class="image fit thumb"><img src="images/thumbs/01.JPG" alt="" /></a>
 								<h3>Ice Cream 2021</h3>
 								<p>HTML5, CSS3, JS, GULP, SASS, BEM</p>
 								<p>About project: mobile-first adaptive landing page to introduce
